add new website from server na

--- a/xem-phim-moi/vay-ham-ke-trung-phat/index.html
+++ b/xem-phim-moi/vay-ham-ke-trung-phat/index.html
@@ -1195,7 +1195,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             7
+             8
             </dd>
             <br/>
            </dl>
@@ -1785,40 +1785,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cung-noi-ve-chu" title="Cùng nói về CHU">
+          <a class="list-top-movie-link" href="/phim-moi/hank-va-ban-xe-tai-cho-rac-phan-2" title="Hank và bạn xe tải chở rác (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cung-noi-ve-chu-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hank-va-ban-xe-tai-cho-rac-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Cùng nói về CHU
+             Hank và bạn xe tải chở rác (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             Let's Talk About CHU
-            </span>
-            <span class="list-top-movie-item-view">
-             1 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/su-trung-phat-cua-krampus" title="Sự Trừng Phạt Của Krampus">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/su-trung-phat-cua-krampus-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Sự Trừng Phạt Của Krampus
-            </span>
-            <span class="list-top-movie-item-en">
-             Krampus The Reckoning
+             Trash Truck (Season 2)
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1829,21 +1807,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/sunny" title="Sunny">
+          <a class="list-top-movie-link" href="/phim-moi/ngoi-nha-cua-manson" title="Ngôi Nhà Của Manson">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/sunny-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ngoi-nha-cua-manson-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Sunny
+             Ngôi Nhà Của Manson
             </span>
             <span class="list-top-movie-item-en">
-             Sunny
+             House of Manson
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1851,21 +1829,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/bao-tuyet-am-chien-thien-co" title="Báo Tuyết: Ám Chiến Thiên Cơ">
+          <a class="list-top-movie-link" href="/phim-moi/anythings-possible" title="Anything’s Possible">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bao-tuyet-am-chien-thien-co-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/anythings-possible-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Báo Tuyết: Ám Chiến Thiên Cơ
+             Anything’s Possible
             </span>
             <span class="list-top-movie-item-en">
-             Snow Leopard Secret War
+             Anything's Possible
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1873,18 +1851,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/to-quoc-phan-5" title="Tổ quốc (Phần 5)">
+          <a class="list-top-movie-link" href="/phim-moi/quan-tra-herbal-tieng-quang-dong" title="Quán trà Herbal (Tiếng Quảng Đông)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/to-quoc-phan-5-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/quan-tra-herbal-tieng-quang-dong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tổ quốc (Phần 5)
+             Quán trà Herbal (Tiếng Quảng Đông)
             </span>
             <span class="list-top-movie-item-en">
-             Homeland (Season 5)
+             Herbal Tea ( Cantonese )
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/dang-sau-doi-mat" title="Đằng sau đôi mắt">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dang-sau-doi-mat-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Đằng sau đôi mắt
+            </span>
+            <span class="list-top-movie-item-en">
+             Behind Her Eyes
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
