add new website from server na

--- a/xem-phim-moi/nhung-ke-theo-doi/index.html
+++ b/xem-phim-moi/nhung-ke-theo-doi/index.html
@@ -1191,7 +1191,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             4
+             5
             </dd>
             <br/>
            </dl>
@@ -1781,62 +1781,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nu-bac-si-goi-cam" title="Nữ Bác Sĩ Gợi Cảm">
+          <a class="list-top-movie-link" href="/phim-moi/little-forest" title="Little Forest">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nu-bac-si-goi-cam-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/little-forest-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Nữ Bác Sĩ Gợi Cảm
+             Little Forest
             </span>
             <span class="list-top-movie-item-en">
-             수상한 상담사
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chan-nho-ban-o-dau" title="Chân Nhỏ, Bạn Ở Đâu?">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chan-nho-ban-o-dau-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Chân Nhỏ, Bạn Ở Đâu?
-            </span>
-            <span class="list-top-movie-item-en">
-             Smallfoot
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dat-den-tinh-lang" title="Đất Đen Tĩnh Lặng">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dat-den-tinh-lang-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Đất Đen Tĩnh Lặng
-            </span>
-            <span class="list-top-movie-item-en">
-             Frozen Surface
+             Little Forest
             </span>
             <span class="list-top-movie-item-view">
              0 lượt xem
@@ -1847,18 +1803,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/mot-dem-o-bangkok" title="Một Đêm ở Bangkok">
+          <a class="list-top-movie-link" href="/phim-moi/ba-ten-an-hai" title="Ba Tên Ăn Hại">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/mot-dem-o-bangkok-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ba-ten-an-hai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Một Đêm ở Bangkok
+             Ba Tên Ăn Hại
             </span>
             <span class="list-top-movie-item-en">
-             One Night in Bangkok
+             Delhi Belly
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/noi-dong-day-hy-vong" title="Nơi Đong Đầy Hy Vọng">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/noi-dong-day-hy-vong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Nơi Đong Đầy Hy Vọng
+            </span>
+            <span class="list-top-movie-item-en">
+             Where Hope Grows
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1869,21 +1847,43 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/thien-than-khat-mau-phan-8" title="Thiên Thần Khát Máu (Phần 8)">
+          <a class="list-top-movie-link" href="/phim-moi/xac-song-nhung-ke-con-lai" title="Xác Sống: Những Kẻ Còn Lại">
            <span class="status">
-            FHD Vietsub
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/thien-than-khat-mau-phan-8-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/xac-song-nhung-ke-con-lai-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thiên Thần Khát Máu (Phần 8)
+             Xác Sống: Những Kẻ Còn Lại
             </span>
             <span class="list-top-movie-item-en">
-             Dexter (Season 8)
+             The Walking Dead: The Ones Who Live
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/miu404" title="MIU404">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/miu404-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             MIU404
+            </span>
+            <span class="list-top-movie-item-en">
+             MIU404
+            </span>
+            <span class="list-top-movie-item-view">
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
